[tool.poetry]
name = "govem"
version = "0.1.0"
description = "Small tool to install multiple godot versions"
authors = ["Winston Yallow"]
readme = "README.md"

[tool.poetry.scripts]
govem = "govem.cli:cli"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
dataclass-wizard = {extras = ["yaml"], version = "^0.22.1"}


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
usort = "^1.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
