[build-system]
requires = ["setuptools", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "govem"
version = "0.2.0"
authors = [
  { name="Winston Yallow" },
]
description = "Small tool to install multiple godot versions"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "click >= 8.1.3",
  "requests >= 2.28.1",
  "beautifulsoup4 >= 4.11.1",
  "dataclass-wizard[yaml] >= 0.22.1",
]

[project.scripts]
govem = "govem.cli:cli"

[project.urls]
"Homepage" = "https://github.com/winston-yallow/govem"
"Bug Tracker" = "https://github.com/winston-yallow/govem/issues"
